# datapeer

./: .gitignore  README.md  package-lock.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/components/: ChatBar.jsx  ChatMessage.jsx  ChatMessages.jsx  ChatPanel.jsx  CodeBlock.jsx  CodeOutput.jsx  CsvPreviewPanel.jsx  DataOutputPanel.jsx  Layout.jsx  PlotImage.jsx  QuantitativeInsights.jsx  Sidebar.jsx
client/src/contexts/: ChatContext.jsx
client/src/pages/: BenchmarkPage.jsx  DatabasePage.jsx  HomePage.jsx
docs/: benchmark-page-flow.md  component-architecture-flow.md  database-file-lifecycle-smaller.md  database-file-lifecycle.md  execution-system-flow.md  mermaid.md  quantitative-architecture.md  safe-code-execution-flow.md
server/: pyproject.toml  requirements.txt
server/app/: app.py  database.py  llm_analysis.py  llm_providers.py
