[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.120.4",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "ydata-profiling>=4.17.0",
    "openai>=2.6.1",
    "setuptools>=80.9.0",
]

